--- a/DeskTile/packages.config
+++ b/DeskTile/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Extended.Wpf.Toolkit" version="2.1.0" targetFramework="net35" />
-  <package id="gong-wpf-dragdrop" version="0.1.3.11" targetFramework="net35" />
+  <package id="Extended.Wpf.Toolkit" version="2.1.0" targetFramework="net35" requireReinstallation="True" />
+  <package id="gong-wpf-dragdrop" version="0.1.3.11" targetFramework="net35" requireReinstallation="True" />
   <package id="SharpShell" version="2.1" targetFramework="net35" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net35" />
 </packages>
